2002-02-02 John R. Jackson (jrj@purdue.edu)

	* configure.in: Add unistd.h to list of places to look for ruserok()
	  declaration.  Reported by John Koenig <jfkoenig@vipb.com> on ALPHA
	  running OSF1 v5.1

2002-02-01  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
        Reported by Roland E. Lipovits <rel@lipo.at0.net>

	* server-src/amstatus.pl.in: Don't double-counts the failed 
	  estimate partitions.

2002-01-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in: New --with-maxtapeblocksize with a default of 32.
	* common-src/amanda.h: MAX_TAPE_BLOCK_KB is defined in amanda.h

2002-01-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/fileheader.c (build_header): Never write the
	  BLOCKSIZE= line.
	* common-src/fileheader.c (parse_file_header): Do not parse the
	  BLOCKSIZE= line.

2002-01-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/fileheader.c (build_header): Write the BLOCKSIZE= line
	  after the dd if=... line.

2002-01-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c: Init code to 0.

2002-01-29 John R. Jackson (jrj@purdue.edu)

	* tape-src/output-tape.c (tape_tapefd_fsf): Some systems cannot deal
	  with large stack variables, so allocate tape I/O buffers dynamically.
	* tape-src/tapeio.c (tapefd_rdlabel): Ditto.

2002-01-25 John R. Jackson (jrj@purdue.edu)

	* server-src/driver.c: Log non-zero exit codes and signals from all
	  the dumpers and taper.

2002-01-25 John R. Jackson (jrj@purdue.edu)

	* server-src/amindexd.c: Clean up reporting of errors by gethostby*()
	  functions.  Make sure they always report what they were trying to
	  look up, and don't bother reporting errno (it would be h_errno).

2002-01-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/fileheader.h (dumpfile_t): Add blocksize field.
	* common-src/fileheader.h (build_header): Change prototype.
	* common-src/fileheader.c (fh_init): blocksize default to 