@@ -1,3 +1,8 @@
+2002-02-03  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/holding.c (scan_holdingdir): Create the list in 
+	  datestamp order.
+
 2002-02-02 John R. Jackson (jrj@purdue.edu)
 
 	* configure.in: Add unistd.h to list of places to look for ruserok()
